--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "audit": "^0.0.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fix": "^0.0.3",
     "jsonwebtoken": "^8.2.1",
-    "knex": "^0.14.4",
+    "knex": "^0.95.2",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
+    "npm": "^7.6.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -32,10 +35,10 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^6.0.0",
-    "mocha": "^5.0.4",
+    "mocha": "^8.3.2",
     "nodemon": "^1.17.5",
-    "nyc": "^11.6.0"
+    "nyc": "^15.1.0"
   }
 }
