--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template for an Express backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "mocha": "mocha --exit --file test/setup.test.js '!(node_modules)/**/*test.js'",
     "mocha-exit0": "mocha --exit --file test/setup.test.js '!(node_modules)/**/*test.js' || true",
     "test": "npm run mocha-exit0 --timeout 6000",
