--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.3.0",
     "dotenv": "^6.0.0",
     "mocha": "^8.3.2",
-    "nodemon": "^1.19.4",
     "nyc": "^15.1.0"
   }
 }
